// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataField есть корректный снимок 1`] = `
<div
  className="DataFieldTest"
/>
`;

exports[`DataField есть корректный снимок 2`] = `
<div
  className="form-group"
>
  <label
    className="font-weight-bold small mb-1 form-label"
    htmlFor="formTest"
  >
    Возраст, 
    <small
      className="text-muted mb-1"
    />
  </label>
  <input
    className="form-control"
    id="formTest"
    onChange={[Function]}
    placeholder=""
    type="text"
  />
</div>
`;

exports[`DataField есть корректный снимок 3`] = `
<div
  className="mb-3"
>
  <div
    className="form-check"
  >
    <input
      checked={false}
      className="form-check-input"
      disabled={false}
      id="m"
      name="genre"
      onChange={[Function]}
      type="radio"
      value="m"
    />
    <label
      className="form-check-label"
      htmlFor="m"
      title=""
    >
      Мужчина
    </label>
  </div>
  <div
    className="form-check"
  >
    <input
      checked={false}
      className="form-check-input"
      disabled={false}
      id="w"
      name="genre"
      onChange={[Function]}
      type="radio"
      value="w"
    />
    <label
      className="form-check-label"
      htmlFor="w"
      title=""
    >
      Женщина
    </label>
  </div>
</div>
`;

exports[`DataField есть корректный снимок 4`] = `
<div
  className="form-group"
>
  <label
    className="font-weight-bold small mb-1 form-label"
    htmlFor="formTest"
  >
    Рост, 
    <small
      className="text-muted mb-1"
    />
  </label>
  <input
    className="form-control"
    id="formTest"
    onChange={[Function]}
    placeholder=""
    type="text"
  />
</div>
`;

exports[`DataField есть корректный снимок 5`] = `
<div
  className="form-group"
>
  <label
    className="font-weight-bold small mb-1 form-label"
    htmlFor="formTest"
  >
    Вес, 
    <small
      className="text-muted mb-1"
    />
  </label>
  <input
    className="form-control"
    id="formTest"
    onChange={[Function]}
    placeholder=""
    type="text"
  />
</div>
`;
